# openbench

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  SWE_BENCH_IMPLEMENTATION.md  pyproject.toml  release-please-config.json  swe_bench_demo.sh  test_swebench.py
.claude/agents/: lighteval-porter.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependency-check.yml  release-please.yaml
scripts/: make_clockbench_data.py
src/openbench/: __init__.py  _registry.py  config.py  eval_config.py
src/openbench/_cli/: __init__.py  describe_command.py  eval_command.py  eval_retry_command.py  export.py  list_command.py  utils.py  view_command.py
src/openbench/datasets/: bbh.py  bbq.py  boolq.py  browsecomp.py  chartqa.py  clockbench.py  cruxeval.py  cti_bench.py  detailbench.py  drop.py  gpqa.py  graphwalks.py  healthbench.py  hle.py  humaneval.py  ifeval.py  jsonschemabench.py  lcb.py  math.py  math_500.py  mathvista.py  mgsm.py  mmlu.py  mmlu_pro.py  mmmu.py  mmmu_pro.py  mrcr.py  mtob.py  rootly_gmcq.py  scicode.py  simpleqa.py  swebench.py
src/openbench/evals/: bbh.py  bbq.py  boolq.py  browsecomp.py  chart_qa.py  chartqa.py  clockbench.py  collie.py  cruxeval.py  cti_bench.py  detailbench.py  drop.py  gmcq.py  gpqa_diamond.py  graphwalks.py  healthbench.py  hle.py  humaneval.py  ifeval.py  jsonschemabench.py  lcb.py  math.py  math_500.py  mathvista.py  mgsm.py  mmlu.py  mmlu_pro.py  mmmu.py  mmmu_pro.py  mrcr.py  mtob.py  musr.py  openbookqa.py  rootly_gmcq.py  scicode.py  (+6 more)
swebench_data/: swe-bench-lite.jsonl
tests/: __init__.py  conftest.py  test_image_utils.py  test_json_schema_scorer.py  test_open_answer_scorer.py  test_registry.py  test_robust_scorers.py  test_swe_bench.py  test_swe_bench_integration.py  test_swebench.py  test_text_utils.py
tests/_cli/: test_eval_command.py  test_eval_command_functions.py
tests/integration/: test_cli.py
tests/monkeypatch/: test_file_recorder_logfile_patch.py
(+87 files in other folders)
